--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header__logo" href="#0">
-        <img class="header__logo-image" src="./images/logo-black.svg" />
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип сайта"/>
       </a>
       <address class="header__address">
         <a class="header___contact-phone header__link" href="tel:+99995555555"
@@ -123,7 +123,7 @@
       <section class="about">
         <div class="about__column-logo">
           <div class="about__logo">
-            <img class="about__logo-image" src="./images/logo-white.svg"'>
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип сайта">
           </div>
         </div>
         <div>
@@ -164,17 +164,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/yt.svg">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Логотип Ютуб">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/vk.svg">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="Логотип ВК">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/pinterest.svg">
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Логотив Пинтерест">
           </a>
         </li>
       </ul>
