--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a class="header__logo" href="#0">
         <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип сайта"/>
       </a>
-      <address class="header__address">
+      <address class="header__address address">
         <a class="header___contact-phone header__link" href="tel:+99995555555"
           >+9 999 555 5555</a>
         <a
@@ -62,7 +62,7 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -137,16 +137,18 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__address">
-        <a class="footer___contact-phone footer__link" href="tel:+99995555555"
-          >+9 999 555 5555</a>
-        <a
-          class="footer__contact-mail footer__link"
-          href="mailto:info@sobaka.ge"
-          >info@sobaka.ge</a>
-        <p class="footer__contact-address">
-          наб. Принсенграхт 263- 265, Амстердам
-        </p>
+      <address class="footer__address address">
+        <address class="header__address address">
+          <a class="header___contact-phone header__link" href="tel:+99995555555"
+            >+9 999 555 5555</a>
+          <a
+            class="header__contact-mail header__link"
+            href="mailto:info@sobaka.ge"
+            >info@sobaka.ge</a>
+          <p class="header__contact-address">
+            наб. Принсенграхт 263- 265, Амстердам
+          </p>
+        </address>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
