--- a/index.html
+++ b/index.html
@@ -25,15 +25,21 @@
         </ul>
       </nav>
       <a class="header__logo" href="#0">
-        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип сайта"/>
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип сайта"
+        />
       </a>
       <address class="header__address address">
         <a class="header___contact-phone header__link" href="tel:+99995555555"
-          >+9 999 555 5555</a>
+          >+9 999 555 5555</a
+        >
         <a
           class="header__contact-mail header__link"
           href="mailto:info@sobaka.ge"
-          >info@sobaka.ge</a>
+          >info@sobaka.ge</a
+        >
         <p class="header__contact-address">
           наб. Принсенграхт 263- 265, Амстердам
         </p>
@@ -123,15 +129,32 @@
       <section class="about">
         <div class="about__column-logo">
           <div class="about__logo">
-            <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип сайта">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="Логотип сайта"
+            />
           </div>
         </div>
         <div>
           <h3 class="about__title">Об аукционе</h3>
           <div class="about__text">
-            <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
           </div>
         </div>
       </section>
@@ -139,12 +162,10 @@
     <footer class="footer">
       <address class="footer__address address">
         <address class="header__address address">
-          <a class="header___contact-phone header__link" href="tel:+99995555555"
-            >+9 999 555 5555</a>
-          <a
+          <a class="header___contact-phone header__link" href="tel:+99995555555">+9 999 555 5555</a>
+          <a>
             class="header__contact-mail header__link"
-            href="mailto:info@sobaka.ge"
-            >info@sobaka.ge</a>
+            href="mailto:info@sobaka.ge" >info@sobaka.ge</a>
           <p class="header__contact-address">
             наб. Принсенграхт 263- 265, Амстердам
           </p>
@@ -166,17 +187,29 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/yt.svg" alt="Логотип Ютуб">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="Логотип Ютуб"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/vk.svg" alt="Логотип ВК">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="Логотип ВК"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Логотив Пинтерест">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Логотив Пинтерест"
+            />
           </a>
         </li>
       </ul>
