--- a/index.html
+++ b/index.html
@@ -160,14 +160,10 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__address address">
-        <address class="header__address address">
-          <a class="header___contact-phone header__link" href="tel:+99995555555">+9 999 555 5555</a>
-          <a class="header__contact-mail header__link" href="mailto:info@sobaka.ge" >info@sobaka.ge</a>
-          <p class="header__contact-address">
-            наб. Принсенграхт 263- 265, Амстердам
-          </p>
-        </address>
+      <address class="header__address address">
+        <a class="header___contact-phone header__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="header__contact-mail header__link" href="mailto:info@sobaka.ge" >info@sobaka.ge</a>
+        <p class="header__contact-address">наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
