--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="header__address address">
+      <address class="address">
         <a class="header___contact-phone header__link" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="header__contact-mail header__link" href="mailto:info@sobaka.ge" >info@sobaka.ge</a>
         <p class="header__contact-address">наб. Принсенграхт 263- 265, Амстердам</p>
